# supplymind

./: .gitignore  DOCS.md  PLAN.txt  README.md  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
a2a/: client.py  server.py
api/: server.py
db/: models.py  seed.py
evaluation/: eval.py  rubric.py
frontend/src/: App.jsx  index.css
graph/: inventory_agent.py  supervisor.py  vendor_agent.py
mcp_server/: config.json  server.py
skills/: rag.py  reorder.py
tests/: conftest.py  test_agent.py  test_tools.py
tools/: inventory.py  po.py
