[project]
name = "supplymind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.84",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
