[project]
name = "supplymind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "deepeval>=3.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.84",
    "langgraph>=0.6.11",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
